--- a/test/spec/.eslintrc
+++ b/test/spec/.eslintrc
@@ -4,7 +4,6 @@
   },
   "rules": {
     "block-scoped-var": 0,
-    "no-unused-expressions": 0,
-    "no-unused-vars": 0
+    "no-unused-expressions": 0
   }
 }
