--- a/package.json
+++ b/package.json
@@ -24,25 +24,25 @@
     "requirejs"
   ],
   "devDependencies": {
-    "bower": "^1.3.12",
-    "eslint": "^0.17.1",
+    "bower": "^1.4.1",
+    "eslint": "^0.19.0",
     "grunt": "^0.4.4",
-    "grunt-babel": "^4.0.0",
+    "grunt-babel": "^5.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-requirejs": "^0.4.3",
     "grunt-dev-update": "^1.1.0",
-    "grunt-eslint": "^9.0.0",
+    "grunt-eslint": "^10.0.0",
     "grunt-karma": "^0.10.1",
-    "karma-babel-preprocessor": "^4.0.0",
-    "karma-coverage": "~0.2.1",
+    "karma-babel-preprocessor": "^5.0.1",
+    "karma-coverage": "^0.2.1",
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1",
-    "karma-mocha-reporter": "^1.0.0",
+    "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-requirejs": "^0.2.2",
     "karma-sinon-chai": "^0.2.0",
-    "load-grunt-config": "^0.16.0",
+    "load-grunt-config": "^0.17.0",
     "time-grunt": "^1.0.0"
   },
   "engines": {
