--- a/package.json
+++ b/package.json
@@ -34,14 +34,16 @@
     "grunt-dev-update": "^1.1.0",
     "grunt-eslint": "^10.0.0",
     "grunt-karma": "^0.10.1",
+    "isparta": "^3.0.3",
     "karma-babel-preprocessor": "^5.0.1",
-    "karma-coverage": "^0.2.1",
+    "karma-coverage": "douglasduteil/karma-coverage#next",
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1",
     "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-requirejs": "^0.2.2",
     "karma-sinon-chai": "^0.2.0",
+    "karma-sourcemap-loader": "^0.3.4",
     "load-grunt-config": "^0.17.0",
     "time-grunt": "^1.0.0"
   },
