--- a/.eslintrc
+++ b/.eslintrc
@@ -41,8 +41,7 @@
     "radix": 2,
     "space-after-keywords": [
       2,
-      "always",
-      {"checkFunctionKeyword": true}
+      "always"
     ],
     "space-before-blocks": [
       2,
