--- a/package.json
+++ b/package.json
@@ -24,28 +24,29 @@
     "requirejs"
   ],
   "devDependencies": {
-    "bower": "^1.4.1",
-    "eslint": "^0.21.0",
-    "grunt": "^0.4.4",
-    "grunt-babel": "^5.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-requirejs": "^0.4.3",
-    "grunt-dev-update": "^1.2.0",
-    "grunt-eslint": "^13.0.0",
-    "grunt-karma": "^0.10.1",
-    "isparta": "^3.0.3",
-    "karma-babel-preprocessor": "^5.1.0",
+    "bower": "1.4.1",
+    "eslint": "1.0.0-rc-1",
+    "grunt": "0.4.4",
+    "grunt-babel": "5.0.0",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-copy": "0.8.0",
+    "grunt-contrib-requirejs": "0.4.3",
+    "grunt-dev-update": "1.2.0",
+    "grunt-eslint": "16.0.0",
+    "grunt-karma": "0.12.0",
+    "isparta": "3.0.3",
+    "karma": "0.13.2",
+    "karma-babel-preprocessor": "5.1.0",
     "karma-coverage": "douglasduteil/karma-coverage#next",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.1",
-    "karma-mocha-reporter": "^1.0.2",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-requirejs": "^0.2.2",
-    "karma-sinon-chai": "^0.2.0",
-    "karma-sourcemap-loader": "^0.3.4",
-    "load-grunt-config": "^0.17.1",
-    "time-grunt": "^1.0.0"
+    "karma-firefox-launcher": "0.1.6",
+    "karma-mocha": "0.2.0",
+    "karma-mocha-reporter": "1.0.2",
+    "karma-phantomjs-launcher": "0.2.0",
+    "karma-requirejs": "0.2.2",
+    "karma-sinon-chai": "1.0.0",
+    "karma-sourcemap-loader": "0.3.4",
+    "load-grunt-config": "0.17.1",
+    "time-grunt": "1.0.0"
   },
   "engines": {
     "node": ">= 0.12.0"
